<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.mazzouzi.memoryleak.ui.ScenarioEnum"/>
        <variable
            name="viewModel"
            type="com.mazzouzi.memoryleak.ui.MainViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/firstBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_primary"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/circular_reference"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/holding_reference_from_background"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/holding_reference_from_background_leak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Leak"
                    android:onClick="@{() -> viewModel.onScenarioSelected(ScenarioEnum.BACKGROUND_LEAK)}"
                    app:layout_constraintEnd_toStartOf="@+id/holding_reference_from_background_solution"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/circular_reference" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/holding_reference_from_background_solution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/solution"
                    android:onClick="@{() -> viewModel.onScenarioSelected(ScenarioEnum.BACKGROUND_SOLUTION)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/holding_reference_from_background_leak"
                    app:layout_constraintTop_toBottomOf="@id/circular_reference" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/secondBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_primary"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstBlock">

                <TextView
                    android:id="@+id/singleton_reference"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/holding_reference_from_singleton"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/singleton_reference_leak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/leak"
                    android:onClick="@{() -> viewModel.onScenarioSelected(ScenarioEnum.SINGLETON_LEAK)}"
                    app:layout_constraintEnd_toStartOf="@+id/singleton_reference_solution"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/singleton_reference" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/singleton_reference_solution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/solution"
                    android:onClick="@{() -> viewModel.onScenarioSelected(ScenarioEnum.SINGLETON_SOLUTION)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/singleton_reference_leak"
                    app:layout_constraintTop_toBottomOf="@id/singleton_reference" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/thirdBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_primary"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/secondBlock">

                <TextView
                    android:id="@+id/anonymous_reference"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/holding_reference_from_anonymous_class"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/anonymous_reference_leak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/leak"
                    android:onClick="@{() -> viewModel.onScenarioSelected(ScenarioEnum.ANONYMOUS_LEAK)}"
                    app:layout_constraintEnd_toStartOf="@+id/anonymous_reference_solution"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/anonymous_reference" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/anonymous_reference_solution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/solution"
                    android:onClick="@{() -> viewModel.onScenarioSelected(ScenarioEnum.ANONYMOUS_SOLUTION)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/anonymous_reference_leak"
                    app:layout_constraintTop_toBottomOf="@id/anonymous_reference" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fourthBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_primary"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thirdBlock">

                <TextView
                    android:id="@+id/android_api_reference"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/holding_reference_from_android_api"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/android_api_reference_leak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/leak"
                    android:onClick="@{() -> viewModel.onScenarioSelected(ScenarioEnum.ANDROID_API_LEAK)}"
                    app:layout_constraintEnd_toStartOf="@+id/android_api_reference_solution"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/android_api_reference" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/android_api_reference_solution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/solution"
                    android:onClick="@{() -> viewModel.onScenarioSelected(ScenarioEnum.ANDROID_API_SOLUTION)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/android_api_reference_leak"
                    app:layout_constraintTop_toBottomOf="@id/android_api_reference" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fifthBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_primary"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fourthBlock">

                <TextView
                    android:id="@+id/base_fragment_reference"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/holding_reference_from_base_fragment"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/base_fragment_reference_leak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/leak"
                    android:onClick="@{() -> viewModel.onScenarioSelected(ScenarioEnum.BASE_FRAGMENT_LEAK)}"
                    app:layout_constraintEnd_toStartOf="@+id/base_fragment_reference_solution"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/base_fragment_reference" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/base_fragment_reference_solution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/solution"
                    android:onClick="@{() -> viewModel.onScenarioSelected(ScenarioEnum.BASE_FRAGMENT_SOLUTION)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/base_fragment_reference_leak"
                    app:layout_constraintTop_toBottomOf="@id/base_fragment_reference" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
